--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
 <title>foobar</title>
 </head>
 <body>
+<div id="bar">
 this is the  body
 <p> foo bar</p>
-<ul>
-    <li> foo1 </li>
-    <li> foo2 </li>
-    <ol>
-        <li> bar1 </li>
-    </ol>
-    <li> foo3 </li>
-</ul>
+</div>
+<div class="foo">
+<table>
+    <tr> 
+        <td>row 1, cell </td>
+        <td>row 1, cell </td>
+        <td>row 1, cell </td>
+        <td>row 1, cell </td>
+    </tr>
+    <tr> 
+        <td>row 2, cell 1 </td>
+        <td>row 2, cell 2 </td>
+        <td>row 2, cell 3 </td>
+        <td>row 2, cell 4 </td>
+    </tr>
+    <tr> 
+        <td> row 3, cell 1  </td>
+        <td> row 3, cell 2 </td>
+        <td> row 3, cell 3 </td>
+        <td> row 3, cell 4 </td>
+    </tr>
+    <tr> 
+    </tr>
+        <td> row 4, cell 1 </td>
+        <td> row 4, cell 2 </td>
+        <td> row 4, cell 3 </td>
+        <td> row 4, cell 4 </td>
+</table>
+</div>
 </body>
 </html>
 
