--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<link rel="stylesheet" type="text/css" href="css/main.css">
 <title>foobar</title>
 </head>
 <body>
@@ -11,10 +13,10 @@ this is the  body
 <div class="foo">
 <table>
     <tr> 
-        <td>row 1, cell </td>
-        <td>row 1, cell </td>
-        <td>row 1, cell </td>
-        <td>row 1, cell </td>
+        <td>row 1, cell 1 </td>
+        <td id="r2c2">row 1, cell 2 </td>
+        <td>row 1, cell 3 </td>
+        <td>row 1, cell 4 </td>
     </tr>
     <tr> 
         <td>row 2, cell 1 </td>
