--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ this is the  body
         <td> row 4, cell 4 </td>
 </table>
 </div>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
 
